<resources>
    <string name="app_name">Eventine</string>
    <string name="app_with_ver">Eventine Alpha 1.13</string>

    <string name="facebook_app_id">194669471175342</string>


    <string-array name="tab_names_main">
        <item>Create</item>
        <item>Feed</item>
        <item>Join</item>
        <item>Profile</item>
    </string-array>
    <string-array name="tab_names_map">
        <item>Settings</item>
        <item>History</item>
        <item>Ping</item>
        <item>Info</item>
        <item>Group</item>
    </string-array>
    <string name="text_invitations">Invitations</string>
    <string name="text_join">Join</string>
    <string name="text_create">Create</string>
    <string name="text_import_from_facebook">Import from Facebook</string>
    <string name="text_import_from_messenger">Import from Messenger</string>
    <string name="text_friends">Friends</string>
    <string name="text_login">Login</string>
    <string name="text_continue_with_fb">Continue with Facebook</string>
    <string name="text_continue_with_google">Continue with Google</string>
    <string name="text_login_divider">OR</string>
    <string name="text_groups">Groups</string>
    <string name="text_recent_ordered_tasks">Recent ordered tasks</string>
    <string name="text_commissioned_from">Commissioned from</string>
    <string name="text_fill_all_fields">You must fill all fields</string>
    <string name="text_turn_on_internet_connection">Turn on Internet connection</string>
    <string name="text_success">Success!</string>
    <string name="text_forgot_password">Forgot password ?</string>
    <string name="text_sign_up_now"><u>Sign up now</u></string>
    <string name="text_sign_in_now"><u>Sign in now</u></string>
    <string name="text_sign_up"><u>Sign up</u></string>
    <string name="text_fb_login"><u>Login with facebook</u></string>
    <string name="text_dont_have_account">Dont have an account?</string>
    <string name="text_have_account">Do you have an account?</string>
    <string name="text_last_tasks">Last tasks</string>
    <string name="text_your_groups">Your groups</string>
    <string name="text_group_name">Group name</string>
    <string name="text_no_invitations">No invitations</string>


    <string name="hint_enter_group_code">Enter group code</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_fullname">Full name</string>

    <string name="toolbar_create_group">Create group</string>
    <string name="toolbar_join_group">Join group</string>
    <string name="toolbar_changeGroup">Change group</string>
    <string name="toolbar_create_account">Create account</string>
</resources>
